--- a/old lesson.html
+++ b/old lesson.html
@@ -27,7 +27,7 @@
 <hr/>
 
 
-<img src="8-10-15%20-0027.JPG" width="200">
+<img src="images/WhatsApp Image 2020-12-06 at 11.00.49.jpeg" height="300" width="200"/>
 <br>
 <br>
 <a href="https://twitter.com/netanyahu/status/1340372561444671489?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Etweet">ביבי המלך </a>
